add tires/wheels pages

--- a/css/revslider.css
+++ b/css/revslider.css
@@ -378,7 +378,7 @@ font-size:24px;
 	.home-slider5 .shop-tires {
 		margin-top: 0;
 	}
-	.shop-tires .tp-caption.LargeTitle, .shop-wheels .tp-caption.LargeTitle {
+	.shop-tires .tp-caption.LargeTitle {
     /*display: none;*/
     margin-top: 0 !important;
 	}
@@ -437,16 +437,16 @@ font-size:24px;
 	.home-slider5 .info.wheels {
 		margin-top: 25%;
 	}
-	.home-slider5 .info.shop-tires, .home-slider5 .info.shop-wheels {
+	.home-slider5 .info.shop-tires {
 		margin-top: 10%;
 	}
-	.home-slider5 .info.shop-tires .tp-caption.LargeTitle, .home-slider5 .info.shop-wheels .tp-caption.LargeTitle{
+	.home-slider5 .info.shop-tires .tp-caption.LargeTitle {
 		padding-bottom: 0 !important;
 	}
-	.home-slider5 .info.shop-tires .tp-caption.LargeTitle span, .home-slider5 .info.shop-wheels .tp-caption.LargeTitle span{
+	.home-slider5 .info.shop-tires .tp-caption.LargeTitle span {
 		padding-left: 0 !important;
 	}
-	.home-slider5 .info.shop-tires .tp-caption, .home-slider5 .info.shop-wheels .tp-caption {
+	.home-slider5 .info.shop-tires .tp-caption {
 		padding-left: 0 !important;
 	}
 	.part {
@@ -465,7 +465,7 @@ font-size:24px;
 	}
 }
 @media only screen and (max-width: 767px) {
-	.shop-tires .tp-caption.LargeTitle, .shop-wheels .tp-caption.LargeTitle {
+	.shop-tires .tp-caption.LargeTitle {
 		text-align: center;
 	}
 }
