--- a/css/style.css
+++ b/css/style.css
@@ -16831,6 +16831,9 @@ button.button.button-clear {
 	#new-part .part-gray .drop-down-area .col-lg-4 {
 		margin-top: 10px;
 	}
+	.drop-down-area .radios div {
+		float: left;
+	}
 }
 @media only screen and (min-width: 320px) and (max-width: 479px) {
 	.info .shop-button-max {
@@ -16898,17 +16901,34 @@ button.button.button-clear {
 	text-align: center;
 	padding: 30px 0 10px;
 }
+.drop-down-area .col-lg-4 {
+	padding-left: 10px;
+	padding-right: 10px;
+}
+.drop-down-area .col-lg-4 .radios {
+	padding-top: 20px;
+	padding-bottom: 0;
+}
+.drop-down-area .radios div {
+	text-align: left;
+}
+.drop-down-area .radios input.radio {
+	margin: 0;
+}
 .drop-down-area .radios label {
 	font-weight: 600;
 	font-size: 14px;
 	text-transform: none;
-	margin: 0 10px 0 0;
+	margin: 0;
 	display: inline-block;
 	vertical-align: middle;
 }
+.drop-down-area .radios label.winter {
+	margin-right: 10px;
+}
 .drop-down-area .divider {
 	border-bottom: 1px solid #E5E5E5;
-	margin: 15px;
+	margin: 10px;
 }
 .drop-down-area .shop-button-green {
 	margin: 20px 0;
@@ -16917,7 +16937,7 @@ button.button.button-clear {
 	padding: 12px 10% 8px;
 }
 
-@media only screen and (max-width: 991px) and (min-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width: 991px) {
 	.part-gray {
 		width: 95%;
 	}
@@ -16932,5 +16952,11 @@ button.button.button-clear {
 	}
 	.drop-down select {
 		font-size: 11px;
+	}
+	.drop-down-area .radios label {
+		font-size: 12px;
+	}
+	.drop-down-area .shop-button-green {
+		margin: 10px 0;
 	}
 }
